# apt-listbugs-rs

./: 09apt-listbugs-rs  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
fixtures/: get_bugs-request.xml  get_bugs-response.xml  list_bugs-request.xml  list_bugs-response.xml
src/: error.rs  input.rs  log.rs  main.rs
src/soap/: envelope.rs  get_bugs.rs  list_bugs.rs  mod.rs
